--- a/H_Pets/.classpath
+++ b/H_Pets/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="C:/Users/Luan Victor/Desktop/servidorM/dependencias/HawkCore.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Luan Victor/Desktop/servidorM/dependencias/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Luan Victor/Desktop/servidorM/FullPvP - V.2/spigot.jar" sourcepath="C:/Users/Luan Victor/Downloads/craftbukkit-1.8.8-R0.1-SNAPSHOT-latest.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Luan Victor/Desktop/servidorM/FullPvP - V.2/plugins/worldguard-6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
